Configured the recipe service to use transactions instead of using jdbc to run a transaction